Funcionando con firefox

--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>Tasty Food</title>
+  <link href="https://fonts.googleapis.com/css?family=Salsa" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 <body>
   
+  <div class="container" id="welcome">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h1>TastyFood</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-6 buttons">
+        <button class="btn logIn" type="submit">Log In</button>
+        <button class="btn signUp" type="submit">Sign Up</button>
+        <p><a href="#">Don't have an account?</a></p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container" id="signUp">
+    
+  </div>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/index.js"></script>
