--- a/index.html
+++ b/index.html
@@ -6,10 +6,34 @@
   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
-<body>
-  
+<body>  
+    <section class="container-fluid">
+    <div class="navbar">
+      <div class="col-xs-4 icon-navbar"><i class="fas fa-arrow-left"></i></div>
+      <div class="col-xs-4 item-navbar"><h1>Search</h1></div>
+      <div class="col-xs-4 icon-navbar-bars"><i class="fas fa-bars"></i></div>  
+    </div>
+
+    <div>
+ <div class="form-group">
+  <label for="sel1">Select:</label>
+  <select class="form-control" id="sel1">
+    <option>Selecciona tu ciudad</option>
+    <option>Santiago</option>
+    <option>Providencia</option>
+    <option>Maipú</option>
+    <option>Recoleta</option>
+  </select>
+</div>
+    </div>
+  </section>
+
+   
+
+  </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/index.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </body>
 </html>
