--- a/index.html
+++ b/index.html
@@ -27,8 +27,27 @@
   
   <div class="container-fluid" id="signUp">
     <!--Incluir navbar hacia atras-->
+    <section class="navbar-container">
+      <header role="banner" class="navbar-color navbar navbar-inverse">
+        <div class="container">
+          <div class="navbar-header">
+            <button data-toggle="collapse-side" data-target=".side-collapse" data-target-2=".side-collapse-container" type="button" class="navbar-toggle pull-right"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+          </div>
+          <div class="navbar-inverse side-collapse in">
+            <nav role="navigation" class="navbar-color navbar-collapse">
+                <ul class="nav navbar-nav">
+                  <li><a href="#Home">Inicio</a></li>
+                  <li><a href="#users">Perfil</a></li>
+                  <li><a href="">Salir</a></li>
+                </ul>
+            </nav>
+          </div>
+        </div>
+      </header>
+    </section>
+
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-12 col-lg-12">
         <h1>SING UP</h1>
         <p style="color: gray">Nice to meet you</p>
       </div>
