--- a/search.html
+++ b/search.html
@@ -35,27 +35,27 @@
       <option id="option-cuatro">Recoleta</option>
     </select>
   </div>
- <div class="container" id="restaurant-container">
- <div class="row">
-   <div class="info-container col-md-4 col-xs-4">
-     <img src="" alt="">
-      <h1 class="info" id="restaurant-name">jjj</h1>
-    <p class="info" id="city">kkk</p>
-   </div>
-   <div class="info-container col-md-4 col-xs-4"></div>
-   <div class="info-container col-md-4 col-xs-4"></div>
+  <div class="container" id="restaurant-container">
+    <div class="row">
+      <div class="info-container col-md-4 col-xs-4">
+        <img src="" alt="">
+        <h1 class="info" id="restaurant-name"></h1>
+        <p class="info" id="city"></p>
+      </div>
+    <div class="info-container col-md-4 col-xs-4"></div>
+    <div class="info-container col-md-4 col-xs-4"></div>
+    </div>
+    <div class="row">
+      <div class="info-container col-md-4 col-xs-4"></div>
+      <div class="info-container col-md-4 col-xs-4"></div>
+      <div class="info-container col-md-4 col-xs-4"></div>
+    </div>
+    <div class="row">
+      <div class="info-container col-md-4 col-xs-4"></div>
+      <div class="info-container col-md-4 col-xs-4"></div>
+      <div class="info-container col-md-4 col-xs-4"></div>
+    </div>  
   </div>
- <div class="row">
-   <div class="info-container col-md-4 col-xs-4">jkj</div>
-   <div class="info-container col-md-4 col-xs-4">kjhk</div>
-   <div class="info-container col-md-4 col-xs-4">jkhk</div>
- </div>
- <div class="row">
-   <div class="info-container col-md-4 col-xs-4">kj</div>
-   <div class="info-container col-md-4 col-xs-4">jkh</div>
-   <div class="info-container col-md-4 col-xs-4">kjhgk</div>
- </div>  
- </div>
 
 
 
