--- a/search.html
+++ b/search.html
@@ -56,7 +56,7 @@
       <div class="info-container col-md-4 col-xs-4"></div>
     </div>  
   </div>
-
+</section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
